<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.jerryz.poems.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_poemDetailFragment"
            app:destination="@id/poemDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.jerryz.poems.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_poemDetailFragment"
            app:destination="@id/poemDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.jerryz.poems.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_poemDetailFragment"
            app:destination="@id/poemDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.jerryz.poems.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment
        android:id="@+id/poemDetailFragment"
        android:name="com.jerryz.poems.ui.detail.PoemDetailFragment"
        android:label="@string/title_poem_detail"
        tools:layout="@layout/fragment_poem_detail">
        <argument
            android:name="poemId"
            app:argType="integer" />
        <!-- 添加返回到顶层导航的动作 -->
        <action
            android:id="@+id/action_poemDetailFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_poemDetailFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment"
            app:popUpTo="@id/favoriteFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_poemDetailFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:popUpTo="@id/searchFragment"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_poemDetailFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:popUpTo="@id/aboutFragment"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>